@startuml

!theme monokai_npp from ..\..\.styles
scale 1.5

class Dog {
    +{static}bark()
}

class Cat {
    +{static}meow()
}

class Person {
    +{static}hello()
}

class Car {
    +{static}move()
}

class Adapter {
    +obj
    __getattr__()
}

hide class empty members

Dog <.. Adapter
Cat <.. Adapter
Person <.. Adapter
Car <.. Adapter

@enduml
